--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Nguyễn Văn Nam - Profile</title>
+    <title>Hai Son Tran - Profile</title>
     <meta
       name="description"
       content="Bolby - Portfolio/CV/Resume HTML Template"
@@ -106,7 +106,7 @@
         <!-- logo image -->
         <div class="site-logo">
           <a href="index.html">
-            <img src="images/avatar/avatar-1.jpg" alt="Nam" />
+            <img src="images/avatar/avatar-1.jpg" alt="Hai Son" />
           </a>
         </div>
       </div>
@@ -117,7 +117,7 @@
       <!-- logo image -->
       <div class="site-logo">
         <a href="index.html">
-          <img src="images/avatar/avatar-1.jpg" alt="NamNV" />
+          <img src="images/avatar/avatar-1.jpg" alt="Hai Son" />
         </a>
       </div>
 
@@ -148,7 +148,7 @@
       <!-- site footer -->
       <div class="footer">
         <!-- copyright text -->
-        <span class="copyright">© 2022 NamNV</span>
+        <span class="copyright">© 2022 HaiSon</span>
       </div>
     </header>
 
@@ -163,12 +163,12 @@
             <img
               src="images/avatar/avatar-1.jpg"
               style="border-radius: 50%; width: 108px"
-              alt="NamNV"
+              alt="HaiSon"
               class="mb-4"
             />
 
             <!-- info -->
-            <h1 class="mb-2 mt-0">Nam Nguyen Van</h1>
+            <h1 class="mb-2 mt-0">Hai Son Tran</h1>
             <span
               >I'm a senior
               <span class="text-rotating"
@@ -180,25 +180,8 @@
             <!-- social icons -->
             <!-- <ul class="social-icons light list-inline mb-0 mt-4">
               <li class="list-inline-item">
-                <a href="https://github.com/namv-digital" target="_blank"
+                <a href="https://github.com/haisontop" target="_blank"
                   ><i class="fab fa-github"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/NamNV.dev/" target="_blank"
-                  ><i class="fab fa-facebook"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.instagram.com/namnv1612k/" target="_blank"
-                  ><i class="fab fa-instagram"></i
-                ></a>
-              </li>
-              <li class="list-inline-item">
-                <a
-                  href="https://join.skype.com/invite/BRSSYJEen3xp"
-                  target="_blank"
-                  ><i class="fab fa-skype"></i
                 ></a>
               </li>
             </ul> -->
@@ -413,7 +396,7 @@
             <div class="col-md-3">
               <div class="text-center text-md-left">
                 <!-- avatar image -->
-                <img src="images/avatar/avatar-1.jpg" alt="NamNV" />
+                <img src="images/avatar/avatar-1.jpg" alt="HaiSon" />
               </div>
               <div class="spacer d-md-none d-lg-none" data-height="30"></div>
             </div>
@@ -424,7 +407,7 @@
                   <div class="col-md-6">
                     <!-- about text -->
                     <p>
-                      I am Nam Nguyen Van, web developer from Hanoi, Vietnam. I
+                      I am Hai Son Tran, web developer from Hanoi, Vietnam. I
                       like Javascript frameworks like ReactJs.
                     </p>
                     <h4>Objective:</h4>
@@ -631,9 +614,8 @@
                 <!-- timeline item -->
                 <div class="timeline-container wow fadeInUp">
                   <div class="content">
-                    <span class="time">2016 - 2019</span>
-                    <h3 class="title">FPT Polytechnic</h3>
-                    <p>Web engineer 08/2016 - 12/2019.</p>
+                    <span class="time">2017 - 2020</span>
+                    <h3 class="title">FStrong Middle/Senior Web developer | Viettel Media</h3>
                     <p>Soft skills, working skills.</p>
                   </div>
                 </div>
@@ -644,10 +626,10 @@
                   data-wow-delay="0.2s"
                 >
                   <div class="content">
-                    <span class="time">2014 - 2016</span>
-                    <h3 class="title">FPT University</h3>
-                    <p>Javascript/VanillaJS/jQuery</p>
-                    <p>PHP/Wordpress</p>
+                    <span class="time">2015 - 2017</span>
+                    <h3 class="title">Web Development Intern | Tribal Media House, Inc</h3>
+                    <p>Developed chat application - Web Chat</p>
+                    <p> PHP, CSS, HTML, MySQL</p>
                   </div>
                 </div>
 
@@ -667,8 +649,8 @@
                 <!-- timeline item -->
                 <div class="timeline-container wow fadeInUp">
                   <div class="content">
-                    <span class="time">2020 - 2021</span>
-                    <h3 class="title">Company Limited JONES</h3>
+                    <span class="time">2020 - 2022</span>
+                    <h3 class="title">Senior Web developer | Longevity InTime BioTech</h3>
                     <p>Front-end, Back-end Developer.</p>
                     <p>System design.</p>
                     <p>Support & training for new fresher.</p>
@@ -682,7 +664,7 @@
                 >
                   <div class="content">
                     <span class="time">2019 - 2020</span>
-                    <h3 class="title">EGD Group</h3>
+                    <h3 class="title">Senior web developer | BKIT Software</h3>
                     <p>Database design.</p>
                     <p>Front-end Developer.</p>
                     <p>Upgrade and fix problems</p>
@@ -908,7 +890,7 @@
                 <h3 class="wow fadeInUp">Let's talk about everything!</h3>
                 <p class="wow fadeInUp">
                   Don't like forms? Send me an
-                  <a href="mailto:namv.digital@gmail.com">email</a>. 👋
+                  <a href="mailto:haisontop@gmail.com">email</a>. 👋
                 </p>
               </div>
             </div>
