--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
             <!-- portfolio item -->
             <div class="col-md-4 col-sm-6 grid-item tailwind">
-              <a href="https://www.joinportal.com" target="_blank">
+              <a href="https://jointeemo.com/" target="_blank">
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
                     <span class="term">ReactJs/TailWindCSS</span>
@@ -764,8 +764,44 @@
               </a>
             </div>
 
+            <div class="col-md-4 col-sm-6 grid-item tailwind">
+              <a href="https://pelsue-main.netlify.app/" target="_blank">
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">ReactJs/TailWindCSS/Contentful</span>
+                    <h4 class="title">Industrial Safety Products</h4>
+                    <span class="more-button"
+                      ><i class="icon-magnifier-add"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/pelsue.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+
             <div class="col-md-4 col-sm-6 grid-item mui">
-              <a href="https://www.joinportal.com" target="_blank">
+              <a href="https://vehicle-search.vercel.app/" target="_blank">
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">ReactJs</span>
+                    <h4 class="title">Vehicle Searching Platform</h4>
+                    <span class="more-button"
+                      ><i class="icon-magnifier-add"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/vehicle.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item mui">
+              <a href="https://www.copilot.com/" target="_blank">
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
                     <span class="term">ReactJs</span>
