add more portfolios

--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
                     <!-- skill item -->
                     <div class="skill-item">
                       <div class="skill-info clearfix">
-                        <h4 class="float-left mb-3 mt-0">PHP</h4>
-                        <span class="float-right">75%</span>
+                        <h4 class="float-left mb-3 mt-0">React.js/Next.js/Gatsby.js</h4>
+                        <span class="float-right">100%</span>
                       </div>
                       <div class="progress">
                         <div
@@ -462,8 +462,26 @@
                           role="progressbar"
                           aria-valuemin="0"
                           aria-valuemax="100"
-                          aria-valuenow="75"
+                          aria-valuenow="100"
                           data-color="#FFD15C"
+                        ></div>
+                      </div>
+                      <div class="spacer" data-height="20"></div>
+                    </div>
+
+                    <div class="skill-item">
+                      <div class="skill-info clearfix">
+                        <h4 class="float-left mb-3 mt-0">TailwindCSS/MUI/AntDesign</h4>
+                        <span class="float-right">100%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar data-background"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="100"
+                          data-color="#6C6CE5"
                         ></div>
                       </div>
                       <div class="spacer" data-height="20"></div>
@@ -472,8 +490,8 @@
                     <!-- skill item -->
                     <div class="skill-item">
                       <div class="skill-info clearfix">
-                        <h4 class="float-left mb-3 mt-0">MySQL</h4>
-                        <span class="float-right">70%</span>
+                        <h4 class="float-left mb-3 mt-0">Node.js</h4>
+                        <span class="float-right">100%</span>
                       </div>
                       <div class="progress">
                         <div
@@ -481,7 +499,7 @@
                           role="progressbar"
                           aria-valuemin="0"
                           aria-valuemax="100"
-                          aria-valuenow="70"
+                          aria-valuenow="100"
                           data-color="#6C6CE5"
                         ></div>
                       </div>
@@ -491,7 +509,7 @@
                     <div class="skill-item">
                       <div class="skill-info clearfix">
                         <h4 class="float-left mb-3 mt-0">English</h4>
-                        <span class="float-right">90%</span>
+                        <span class="float-right">100%</span>
                       </div>
                       <div class="progress">
                         <div
@@ -499,7 +517,7 @@
                           role="progressbar"
                           aria-valuemin="0"
                           aria-valuemax="100"
-                          aria-valuenow="90"
+                          aria-valuenow="100"
                           data-color="#087f23"
                         ></div>
                       </div>
@@ -742,6 +760,58 @@
                 <img src="images/blog/1.svg" alt="Honda Interactive" />
                 <h2>E-Learning</h2>
                 <p>Website that sells online courses.</p>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item laravel tailwind">
+              <a href="https://osmen.com.au" class="work-content">
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Next.js/TailwindCSS</span>
+                    <h4 class="title">Osmen eCommerce</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/osmen.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="e-commerce"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/1.svg" alt="Honda Interactive" />
+                <h2>eCommerce</h2>
+                <p>Website that sells outdoor furnitures.</p>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item laravel tailwind">
+              <a href="https://skribe.ai" class="work-content">
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Next.js/MUI/Zoom SDK</span>
+                    <h4 class="title">Skribe</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/skribe.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="b2b"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/skribe.png" alt="Honda Interactive" />
+                <h2>Skribe</h2>
+                <p>B2B platform with Zoom SDK Integration.</p>
               </div>
             </div>
 
