--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               >I'm a senior
               <span class="text-rotating"
                 >Front-End(Javascript/Typescript/React.js/Vue.js) Developer,
-                Backend(Node.js/PHP) Developer</span
+                Fullstack(JS frameworks/Node.js/Firebase) Developer</span
               ></span
             >
 
@@ -453,7 +453,9 @@
                     <!-- skill item -->
                     <div class="skill-item">
                       <div class="skill-info clearfix">
-                        <h4 class="float-left mb-3 mt-0">React.js/Next.js/Gatsby.js</h4>
+                        <h4 class="float-left mb-3 mt-0">
+                          React.js/Next.js/Gatsby.js
+                        </h4>
                         <span class="float-right">100%</span>
                       </div>
                       <div class="progress">
@@ -471,7 +473,9 @@
 
                     <div class="skill-item">
                       <div class="skill-info clearfix">
-                        <h4 class="float-left mb-3 mt-0">TailwindCSS/MUI/AntDesign</h4>
+                        <h4 class="float-left mb-3 mt-0">
+                          TailwindCSS/MUI/AntDesign
+                        </h4>
                         <span class="float-right">100%</span>
                       </div>
                       <div class="progress">
@@ -633,7 +637,9 @@
                 <div class="timeline-container wow fadeInUp">
                   <div class="content">
                     <span class="time">2017 - 2020</span>
-                    <h3 class="title">FStrong Middle/Senior Web developer | Viettel Media</h3>
+                    <h3 class="title">
+                      FStrong Middle/Senior Web developer | Viettel Media
+                    </h3>
                     <p>Soft skills, working skills.</p>
                   </div>
                 </div>
@@ -645,9 +651,11 @@
                 >
                   <div class="content">
                     <span class="time">2015 - 2017</span>
-                    <h3 class="title">Web Development Intern | Tribal Media House, Inc</h3>
+                    <h3 class="title">
+                      Web Development Intern | Tribal Media House, Inc
+                    </h3>
                     <p>Developed chat application - Web Chat</p>
-                    <p> PHP, CSS, HTML, MySQL</p>
+                    <p>PHP, CSS, HTML, MySQL</p>
                   </div>
                 </div>
 
@@ -668,7 +676,9 @@
                 <div class="timeline-container wow fadeInUp">
                   <div class="content">
                     <span class="time">2020 - 2022</span>
-                    <h3 class="title">Senior Web developer | Longevity InTime BioTech</h3>
+                    <h3 class="title">
+                      Senior Web developer | Longevity InTime BioTech
+                    </h3>
                     <p>Front-end, Back-end Developer.</p>
                     <p>System design.</p>
                     <p>Support & training for new fresher.</p>
@@ -738,7 +748,11 @@
           <!-- portfolio wrapper -->
           <div class="row portfolio-wrapper">
             <div class="col-md-4 col-sm-6 grid-item laravel chakraui">
-              <a href="https://www.fl4k.com" class="work-content">
+              <a
+                href="https://www.fl4k.com"
+                class="work-content"
+                target="_blank"
+              >
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
                     <span class="term">Next.js/ChakraUI</span>
@@ -763,8 +777,45 @@
               </div>
             </div>
 
-            <div class="col-md-4 col-sm-6 grid-item laravel tailwind">
-              <a href="https://osmen.com.au" class="work-content">
+            <div class="col-md-4 col-sm-6 grid-item chakraui">
+              <a
+                href="https://www.stonedapecrew.com"
+                class="work-content"
+                target="_blank"
+              >
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Next.js/ChakraUI</span>
+                    <h4 class="title">Blockchian/Crytocurrency</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img
+                      src="images/blog/stonnedapecrew.png"
+                      alt="Portfolio-title"
+                    />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="e-learning"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/1.svg" alt="Honda Interactive" />
+                <h2>Blockchain/Crytocurrency</h2>
+                <p>Website that sells crytocurrency.</p>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item tailwind">
+              <a
+                href="https://osmen.com.au"
+                class="work-content"
+                target="_blank"
+              >
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
                     <span class="term">Next.js/TailwindCSS</span>
@@ -789,8 +840,8 @@
               </div>
             </div>
 
-            <div class="col-md-4 col-sm-6 grid-item laravel tailwind">
-              <a href="https://skribe.ai" class="work-content">
+            <div class="col-md-4 col-sm-6 grid-item firebase mui">
+              <a href="https://skribe.ai" class="work-content" target="_blank">
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
                     <span class="term">Next.js/MUI/Zoom SDK</span>
@@ -805,10 +856,7 @@
                   </div>
                 </div>
               </a>
-              <div
-                id="b2b"
-                class="white-popup zoom-anim-dialog mfp-hide"
-              >
+              <div id="b2b" class="white-popup zoom-anim-dialog mfp-hide">
                 <img src="images/blog/skribe.png" alt="Honda Interactive" />
                 <h2>Skribe</h2>
                 <p>B2B platform with Zoom SDK Integration.</p>
