Added more experience

--- a/index.html
+++ b/index.html
@@ -633,10 +633,32 @@
               <div
                 class="timeline edu bg-white rounded shadow-dark padding-30 overflow-hidden"
               >
+              <!-- timeline item -->
+              <div class="timeline-container wow fadeInUp">
+                <div class="content">
+                  <span class="time">2024 - Present</span>
+                  <h3 class="title">
+                    Frontend Engineer | Quantivly
+                  </h3>
+                  <p>Dashboard, Data Visualization, Fabulous UI/UX Design | Next.js, React.js, MUI, GraphQL, Apollo Contributor</p>
+                </div>
+              </div>
+
+              <!-- timeline item -->
+              <div class="timeline-container wow fadeInUp">
+                <div class="content">
+                  <span class="time">2023 - 2024</span>
+                  <h3 class="title">
+                    Senior Web Developer | StudyKIK
+                  </h3>
+                  <p>Microwebsite Builder, CMS Integration | Gatsby.js, React.js, TailwindCSS, Sanity, GraphiQL</p>
+                </div>
+              </div>
+
                 <!-- timeline item -->
                 <div class="timeline-container wow fadeInUp">
                   <div class="content">
-                    <span class="time">2017 - 2020</span>
+                    <span class="time">2017 - 2019</span>
                     <h3 class="title">
                       FStrong Middle/Senior Web developer | Viettel Media
                     </h3>
@@ -747,6 +769,98 @@
 
           <!-- portfolio wrapper -->
           <div class="row portfolio-wrapper">
+
+            
+            <div class="col-md-4 col-sm-6 grid-item mui">
+              <a
+                href="https://quantivly.com/"
+                class="work-content"
+                target="_blank"
+              >
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Next.js/MUI/KeyCloak/GraphQL</span>
+                    <h4 class="title">Quantivly</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/Quantivly.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="Quantivly | Dashboard"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/1.svg" alt="Honda Interactive" />
+                <h2>Website Builder</h2>
+                <p>Website builder for pharmaceutical company.</p>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item gatsby tailwind sanity">
+              <a
+                href="https://eyepointpharma.com/"
+                class="work-content"
+                target="_blank"
+              >
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Gatsby.js/TailwindCSS/Sanity</span>
+                    <h4 class="title">EyePoint Pharma</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/Website Builder.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="e-learning"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/1.svg" alt="Honda Interactive" />
+                <h2>Website Builder</h2>
+                <p>Website builder for pharmaceutical company.</p>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 grid-item mui">
+              <a
+                href="https://location-distance-nine.vercel.app/"
+                class="work-content"
+                target="_blank"
+              >
+                <div class="portfolio-item rounded shadow-dark">
+                  <div class="details">
+                    <span class="term">Next.js/TailwindCSS/Google Map/Mapbox</span>
+                    <h4 class="title">Locali</h4>
+                    <span class="more-button"
+                      ><i class="icon-camrecorder"></i
+                    ></span>
+                  </div>
+                  <div class="thumb">
+                    <img src="images/blog/Locali.png" alt="Portfolio-title" />
+                    <div class="mask"></div>
+                  </div>
+                </div>
+              </a>
+              <div
+                id="Locali | Google Map | Mapbox"
+                class="white-popup zoom-anim-dialog mfp-hide"
+              >
+                <img src="images/blog/1.svg" alt="Honda Interactive" />
+                <h2>Locali</h2>
+                <p>Finding nearby restaurants, cafes, bars, and more.</p>
+              </div>
+            </div>
+
             <div class="col-md-4 col-sm-6 grid-item laravel chakraui">
               <a
                 href="https://www.fl4k.com"
