Added linkedin profile

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
           <li>
             <a href="#contact"><i class="icon-bubbles"></i></a>
           </li>
+          <li>
+            <a href="https://linkedin.com/in/hai-son-tran-959214344" target="_blank"><i class="icon-social-linkedin"></i></a>
+          </li>
         </ul>
       </nav>
 
