--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             <div class="col-md-4">
               <!-- service box -->
               <div
-                class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
+                class="service-box rounded data-background padding-30 text-center shadow-blue"
                 data-color="#6C6CE5"
               >
                 <img src="images/service-1.svg" alt="UI/UX design" />
@@ -600,7 +600,7 @@
             <div class="col-md-4">
               <!-- service box -->
               <div
-                class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
+                class="service-box rounded data-background padding-30 text-center shadow-pink"
                 data-color="#F97B8B"
               >
                 <img src="images/service-3.svg" alt="UI/UX design" />
@@ -1244,8 +1244,8 @@
                   class="btn btn-default"
                 >
                   <i class="fas fa-spinner fa-spin" style="display: none"></i>
-                  Send Message</button
-                ><!-- Send Button -->
+                  Send Message
+                </button><!-- Send Button -->
               </form>
               <!-- Contact Form end -->
             </div>
