changed some options

--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
             <a href="#contact"><i class="icon-bubbles"></i></a>
           </li>
           <li>
-            <a href="https://linkedin.com/in/hai-son-tran-959214344" target="_blank"><i class="icon-social-linkedin"></i></a>
+            <a
+              href="https://linkedin.com/in/hai-son-tran-959214344"
+              target="_blank"
+              ><i class="icon-social-linkedin"></i
+            ></a>
           </li>
         </ul>
       </nav>
@@ -176,7 +180,7 @@
               >I'm a senior
               <span class="text-rotating"
                 >Front-End(Javascript/Typescript/React.js/Vue.js) Developer,
-                Fullstack(JS frameworks/Node.js/Firebase) Developer</span
+                Fullstack(JS frameworks/PHP/Node.js/Firebase) Developer</span
               ></span
             >
 
@@ -473,7 +477,26 @@
                       </div>
                       <div class="spacer" data-height="20"></div>
                     </div>
-
+                    <!-- skill item -->
+                    <div class="skill-item">
+                      <div class="skill-info clearfix">
+                        <h4 class="float-left mb-3 mt-0">
+                          PHP/Laravel/CodeIgniter
+                        </h4>
+                        <span class="float-right">100%</span>
+                      </div>
+                      <div class="progress">
+                        <div
+                          class="progress-bar data-background"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="100"
+                          data-color="#FF4C60"
+                        ></div>
+                      </div>
+                      <div class="spacer" data-height="20"></div>
+                    </div>
                     <div class="skill-item">
                       <div class="skill-info clearfix">
                         <h4 class="float-left mb-3 mt-0">
@@ -636,27 +659,29 @@
               <div
                 class="timeline edu bg-white rounded shadow-dark padding-30 overflow-hidden"
               >
-              <!-- timeline item -->
-              <div class="timeline-container wow fadeInUp">
-                <div class="content">
-                  <span class="time">2024 - Present</span>
-                  <h3 class="title">
-                    Frontend Engineer | Quantivly
-                  </h3>
-                  <p>Dashboard, Data Visualization, Fabulous UI/UX Design | Next.js, React.js, MUI, GraphQL, Apollo Contributor</p>
+                <!-- timeline item -->
+                <div class="timeline-container wow fadeInUp">
+                  <div class="content">
+                    <span class="time">2024 - Present</span>
+                    <h3 class="title">Frontend Engineer | Quantivly</h3>
+                    <p>
+                      Dashboard, Data Visualization, Fabulous UI/UX Design |
+                      Next.js, React.js, MUI, GraphQL, Apollo Contributor
+                    </p>
+                  </div>
                 </div>
-              </div>
 
-              <!-- timeline item -->
-              <div class="timeline-container wow fadeInUp">
-                <div class="content">
-                  <span class="time">2023 - 2024</span>
-                  <h3 class="title">
-                    Senior Web Developer | StudyKIK
-                  </h3>
-                  <p>Microwebsite Builder, CMS Integration | Gatsby.js, React.js, TailwindCSS, Sanity, GraphiQL</p>
+                <!-- timeline item -->
+                <div class="timeline-container wow fadeInUp">
+                  <div class="content">
+                    <span class="time">2023 - 2024</span>
+                    <h3 class="title">Senior Web Developer | StudyKIK</h3>
+                    <p>
+                      Microwebsite Builder, CMS Integration | Gatsby.js,
+                      React.js, TailwindCSS, Sanity, GraphiQL
+                    </p>
+                  </div>
                 </div>
-              </div>
 
                 <!-- timeline item -->
                 <div class="timeline-container wow fadeInUp">
@@ -772,8 +797,6 @@
 
           <!-- portfolio wrapper -->
           <div class="row portfolio-wrapper">
-
-            
             <div class="col-md-4 col-sm-6 grid-item mui">
               <a
                 href="https://quantivly.com/"
@@ -789,7 +812,10 @@
                     ></span>
                   </div>
                   <div class="thumb">
-                    <img src="images/blog/Quantivly.png" alt="Portfolio-title" />
+                    <img
+                      src="images/blog/Quantivly.png"
+                      alt="Portfolio-title"
+                    />
                     <div class="mask"></div>
                   </div>
                 </div>
@@ -819,7 +845,10 @@
                     ></span>
                   </div>
                   <div class="thumb">
-                    <img src="images/blog/Website Builder.png" alt="Portfolio-title" />
+                    <img
+                      src="images/blog/Website Builder.png"
+                      alt="Portfolio-title"
+                    />
                     <div class="mask"></div>
                   </div>
                 </div>
@@ -842,7 +871,9 @@
               >
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
-                    <span class="term">Next.js/TailwindCSS/Google Map/Mapbox</span>
+                    <span class="term"
+                      >Next.js/TailwindCSS/Google Map/Mapbox</span
+                    >
                     <h4 class="title">Locali</h4>
                     <span class="more-button"
                       ><i class="icon-camrecorder"></i
@@ -872,7 +903,9 @@
               >
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
-                    <span class="term">Next.js/ChakraUI</span>
+                    <span class="term"
+                      >Next.js/Inertia.js/Laravel/ChakraUI</span
+                    >
                     <h4 class="title">E-Learning/FL4K</h4>
                     <span class="more-button"
                       ><i class="icon-camrecorder"></i
@@ -1244,8 +1277,8 @@
                   class="btn btn-default"
                 >
                   <i class="fas fa-spinner fa-spin" style="display: none"></i>
-                  Send Message
-                </button><!-- Send Button -->
+                  Send Message</button
+                ><!-- Send Button -->
               </form>
               <!-- Contact Form end -->
             </div>
