--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <!-- avatar image -->
             <img
               src="images/avatar/avatar-1.jpg"
-              style="border-radius: 50%; width: 108px"
+              style="border-radius: 50%; width: 108px;"
               alt="HaiSon"
               class="mb-4"
             />
@@ -481,7 +481,7 @@
                     <div class="skill-item">
                       <div class="skill-info clearfix">
                         <h4 class="float-left mb-3 mt-0">
-                          PHP/Laravel/CodeIgniter
+                          Python/Django/Flask/FastAPI
                         </h4>
                         <span class="float-right">100%</span>
                       </div>
@@ -777,6 +777,7 @@
               TailwindCSS
             </li>
             <li class="list-inline-item" data-filter=".laravel">Laravel</li>
+            <li class="list-inline-item" data-filter=".django">Django</li>
             <!-- <li class="list-inline-item" data-filter=".nuxtjs">Nuxtjs</li>
             <li class="list-inline-item" data-filter=".wordpress">Wordpress</li> -->
           </ul>
@@ -797,7 +798,7 @@
 
           <!-- portfolio wrapper -->
           <div class="row portfolio-wrapper">
-            <div class="col-md-4 col-sm-6 grid-item mui">
+            <div class="col-md-4 col-sm-6 grid-item mui nextjs keycloak django graphql">
               <a
                 href="https://quantivly.com/"
                 class="work-content"
@@ -805,7 +806,9 @@
               >
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
-                    <span class="term">Next.js/MUI/KeyCloak/GraphQL</span>
+                    <span class="term"
+                      >Next.js/MUI/KeyCloak/Django/GraphQL</span
+                    >
                     <h4 class="title">Quantivly</h4>
                     <span class="more-button"
                       ><i class="icon-camrecorder"></i
@@ -863,7 +866,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 col-sm-6 grid-item mui">
+            <div class="col-md-4 col-sm-6 grid-item tailwind">
               <a
                 href="https://location-distance-nine.vercel.app/"
                 class="work-content"
@@ -1014,7 +1017,7 @@
             </div>
 
             <!-- portfolio item -->
-            <div class="col-md-4 col-sm-6 grid-item tailwind">
+            <div class="col-md-4 col-sm-6 grid-item tailwind django">
               <a href="https://jointeemo.com/" target="_blank">
                 <div class="portfolio-item rounded shadow-dark">
                   <div class="details">
@@ -1276,7 +1279,7 @@
                   value="Submit"
                   class="btn btn-default"
                 >
-                  <i class="fas fa-spinner fa-spin" style="display: none"></i>
+                  <i class="fas fa-spinner fa-spin" style="display: none;"></i>
                   Send Message</button
                 ><!-- Send Button -->
               </form>
